# uptime-kuma-rest

./: .gitignore  Dockerfile  LICENSE  README-DOCKER.md  README.md  Requirements.txt  app.py  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-build.disabled  docker-build.yml  docs.yml
docs/: get_monitor_status.yml  getting-started.md  index.md  is_monitor_active.yml  mkdocs.yml  monitor_details.yaml  monitors.yaml  pause_monitor.yaml  resume_monitor.yaml
tests/: test_app.py
