[tool.poetry]
name = "uptime-kuma-rest"
version = "0.1.0"
description = ""
authors = ["Simon Inglis <simon.inglis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uptime-kuma-api = "^1.2.1"
flask = "^3.0.1"
python-dotenv = "^1.0.1"
flasgger = "^0.9.7.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-flask = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
